# PyFront_RsBack

./: .gitignore  .pdm.toml  Cargo.toml  README.md  pyproject.toml
backend/: flag.rs  notify.rs  query.rs
data/: flag.txt  res.txt  rflag.txt  sflag.txt
frontend/: model.py  view.ui  viewmodel.py
